[gd_scene load_steps=2 format=3 uid="uid://d9e3f5g7h2i4"]

[ext_resource type="Script" path="res://scripts/VictoryScreen.gd" id="1"]

[node name="Vict

<applaa-write path="godot-project/scenes/VictoryScreen.tscn" description="Victory screen scene">
[gd_scene load_steps=2 format=3 uid="uid://d9e3f5g7h2i4"]

[ext_resource type="Script" path="res://scripts/VictoryScreen.gd" id="1"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0784314, 0.0784314, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üèÜ VICTORY! üèÜ"
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(0.239216, 0.843137, 0.411765, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1
modulate = Color(1, 0.843137, 0, 1)

[node name="MovesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Moves Made: 0"
horizontal_alignment = 1

[node name="CapturedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pieces Captured: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Play Again"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Close"